# simple_memory

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README  README.md
include/DualPortMemory/: DualPortMemory.h
include/SimpleMemory/: BaseMemory.h  DualPortMemory.h  simpleMemory.h
misc/: FindSIMPLEMEMORY.cmake
test/: ByteEnableTest.cpp  CMakeLists.txt  DualPortMemoryTest.cpp  SimpleMemoryTest.cpp
